# SpecLoop

./: .gitignore  AGENTS.md  EPICS.md  GOALS.md  README.md  pyproject.toml  skills.json
.claudecode/: skills.json
.opencode/agents/: code_reviewer.md
.specify/memory/: constitution.md
scripts/: lint_check.sh
skills/: project_epics.md  project_goals.md  specloop.md
specs/001-agent-agnostic-skills/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-agent-agnostic-skills/contracts/: skills-schema.json
specs/002-speckit-automation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-speckit-automation/checklists/: requirements.md
specs/002-speckit-automation/contracts/: epic-schema.md
specs/003-goals-epics-drafting/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-goals-epics-drafting/checklists/: requirements.md
specs/003-goals-epics-drafting/contracts/: epics-format.md
specs/004-roadmap-review-optimization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-roadmap-review-optimization/checklists/: requirements.md
specs/004-roadmap-review-optimization/contracts/: optimization-output.md
src/: skills.json
src/agent_agnostic/: cli.py  discovery.py
src/agent_agnostic/deployment/: base.py  claude.py  gemini.py  opencode.py
src/agent_agnostic/models/: manifest.py  validator.py
src/agent_agnostic/runner/: server.py
src/speckit_loop/: README.md  cli.py
src/speckit_loop/engine/: loop.py  orchestrator.py  workflow.py
src/speckit_loop/git/: wrapper.py
src/speckit_loop/parsers/: goal_parser.py
src/specloop/: README.md  cli.py  discovery.py
subagents/: code_reviewer.md  speckit-loop.md  specloop.md
tests/fixtures/: EPICS_MOCK.md
(+19 files in other folders)
